# KDetSim

./: .gitignore  CMakeLists.txt  README.md  makeLinuxMac  makeLinuxMacRoot6  makewin  makewin_Root5  makewin_Root6
config/: CompilerConfig.cmake  Package.cmake  ParseVersion.cmake  ROOT.cmake
config/package/: KDetSimConfig.cmake
examples/: PixelLandau.C  SiDriftExample.C  SiDriftExample_1.C  SiDriftExample_2.C  SiDriftExample_3.C  SiDriftExample_4.C  Test3D.C  Test3D_2.C  Test3D_3.C  TestDetector_1.C  TestDetector_2.C  TestEdgeLGAD.C  TestEq.C  TestLGAD.C  TestPad.C  TestPad_1.C  TestPad_2.C  TestPad_3.C  TestPixel_1.C  TestPixel_2.C  TestStripDetector_1.C  TestStripDetector_1a.C  TestStripDetector_2.C  TestStripDetector_3.C  TestStripDetector_4.C  TestThinLGAD.C  XFAB.C  XFAB_Drift.C
inc/: K3D.h  KDetSim_LinkDef.h  KDetector.h  KField.h  KGeometry.h  KImplant2D.h  KImplant3D.h  KMaterial.h  KMesh.h  KPad.h  KPixel.h  KStrip.h  KStruct.h  fizika.h  nrutil.h
lib/: nrutil.lib
manuals/: #KDetSim.tex#  CommentsToManual.docx  KDetSim.aux  KDetSim.tex  KDetSim.tex~  KDetSim.toc
src/: K3D.cxx  KDetector.cxx  KField.cxx  KGeometry.cxx  KImplant2D.cxx  KImplant3D.cxx  KMaterial.cxx  KMesh.cxx  KMinuit.cxx  KPad.cxx  KPixel.cxx  KStrip.cxx  KStruct.cxx  nrutil.cxx
